# serverlens

./: .gitignore  README.md  composer.json  config.example.yaml  description.md  phpunit.xml  pyproject.toml  requirements.txt
.phpunit.cache/: test-results
debug/: test-client.php  test-config.yaml
debug/docker-test/: Dockerfile  test-install.sh  test-migration.sh
debug/test-data/: sse_output.txt
docs/: architecture.md  quickstart.md
docs/adr/: 0001-config-mutation.md
docs/server/: api.md  setup.md
etc/: serverlens.service
etc/configs/: rias-demon.config.patch.yaml  rias.config.patch.yaml
mcp-client/: composer.json  config.example.yaml
mcp-client/docs/: README.md
mcp-client/src/: Config.php  McpProxy.php  SshConnection.php
scripts/: change_db_password.sh  deploy.sh  install.sh  migrate-php-to-python.sh  setup_db.sh  setup_db_users.sql  setup_mysql.sh  uninstall.sh  update.sh
serverlens/: __init__.py  __main__.py  application.py  config.py
serverlens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
serverlens/admin/: __init__.py  __main__.py  cli.py  patch.py  policy.py  store.py  totp.py
serverlens_mcp/: __main__.py  config.py  mcp_proxy.py  ssh_connection.py
src/: Application.php  Config.php
tests/: AuditLoggerTest.php  ConfigLoadTest.php  ConfigReaderTest.php  DbAggregateTest.php  DbQueryValidationTest.php  JournalReaderTest.php  LogReaderTest.php  McpServerTest.php  RateLimiterTest.php  RedactorTest.php  TokenAuthTest.php
tests_py/: test_admin.py  test_db_aggregate.py  test_journal_reader.py
(+35 files in other folders)
